--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52,6 +52,24 @@
  keywords = {command-line, commands, edgewrite, gestures, guessability, icons, immediate usability, keywords, labels, proposals, referents, symbols, text entry, unistrokes},
 } 
 
+@inproceedings{Findlater:2012,
+ author = {Findlater, Leah and Lee, Ben and Wobbrock, Jacob},
+ title = {Beyond QWERTY: Augmenting Touch Screen Keyboards with Multi-touch Gestures for Non-alphanumeric Input},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '12},
+ year = {2012},
+ isbn = {978-1-4503-1015-4},
+ location = {Austin, Texas, USA},
+ pages = {2679--2682},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2207676.2208660},
+ doi = {10.1145/2207676.2208660},
+ acmid = {2208660},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {gestures, text input, touch-screen},
+} 
+
 @inproceedings{Wobbrock:2009,
  author = {Wobbrock, Jacob O. and Morris, Meredith Ringel and Wilson, Andrew D.},
  title = {User-defined Gestures for Surface Computing},
