--- a/tochi-elicitation.Rmd
+++ b/tochi-elicitation.Rmd
@@ -67,7 +67,7 @@ where $p_a$ is the proportion of items on which any two raters agree, and $p_e$ 
 @Vatavu:2016 included a short discussion about chance-corrected coefficients and concluded that such statistics are not appropriate for gesture elicitation methodologies. Their argument is that gestural vocabularies are open-ended. Since participants choose from a infinite number of possibilities, the problem of chance agreement is non-existent. The TOCHI article extensively discusses their argumentation and rejects their conclusion. 
 
 ###Bias and Its Effect on Agreement
-In practice, agreement is not assessed over an infinite set of gesture possibilities. Participants’ gesture proposals are first classified into signs, and agreement is assessed over the sign vocabulary defined by that specific classification process. However, the article shows that even if we assumed an infinite number of signs. The reason is the presence of <emph>bias</emph>, an overall tendency of some signs to appear more frequently than others, independently of the referents. The article discusses usability, social, legacy, procedural, and classification biases, which can cause a small number of signs to dominate the results of a gesture elicitation study.
+In practice, agreement is not assessed over an infinite set of gesture possibilities. Participants’ gesture proposals are first classified into signs, and agreement is assessed over the sign vocabulary defined by that specific classification process. However, the article shows that even if one assumes an infinite number of signs, the problem of chance agreement does not disappear. This is due to the presence of <emph>bias</emph>, the overall tendency of some signs to appear more frequently than others, independently of the referents. The article discusses usability, social, legacy, procedural, and classification biases, which can cause a small number of signs to dominate the results of a gesture elicitation study.
 
 Bias increases the likelihood of chance agreement and makes the use of the AR index problematic. The interactive figures below demonstrate how bias affects agreement scores under a simulation setting, when participants are blindfolded so they cannot see the referents for which they propose gestures. Fleiss' Kappa always gives values that are very close to zero, but AR values increase as bias becomes stronger. In conclusion, AR may also capture random agreements that are not specific to the referents of interest, and unfortunately, such agreements say nothing about how appropriate a given mapping between signs and referents is.
 
